Fix #42 - Prevent aside/main from overlapping on wide screens

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -71,8 +71,8 @@ section {
 }
 
 aside {
-    position: fixed;
-    width: 15%;
+    float: left;
+    width: 23%;
     text-align: center;
     line-height: 35px;
     &:extend(.uppercase-style);
